--- a/style.css
+++ b/style.css
@@ -28,3 +28,13 @@
     color: #E5E7EB;
     font-size: 18px;
 }
+
+.upper-middle p{
+    font-size: 36px;
+    font-weight: bolder;
+    color: #1F2937;
+}
+.text ul{
+    color: #1F2937;
+    font-size: 18px;
+}
