Added styles to class lower-middle
-replaced h2 element from div element in html
-added background color,font color and font size to the class lower-middle
-added font-weight to bolder in div element

--- a/style.css
+++ b/style.css
@@ -38,3 +38,11 @@
     color: #1F2937;
     font-size: 18px;
 }
+
+.lower-middle{
+    background-color: #E5E7EB;
+    color: #1F2937;
+    font-size: 36px;
+}.lower-middle div{
+    font-weight: bolder;
+}
