--- a/style.css
+++ b/style.css
@@ -8,11 +8,15 @@
 .container{
     display: flex;
     justify-content: space-around;
+}.content-left{
+    width: 430px;
+    height: 158px;
 }
 .content-left p {
     color:  #f9faf8;
     font-size: 48px;
     font-weight: bolder;
+    margin: 0;
 }
 .right-side ul{
     display: flex;
@@ -20,6 +24,7 @@
     color: #E5E7EB;
     font-size: 18px;
 }
+
 .content-left button{
     color: #E5E7EB;
     background-color: #3882f6;
@@ -32,9 +37,25 @@
 .left-side {
     color: #f9faf8;
     font-size: 24px;
-}.content-right{
+}
+.container1{
+    display: flex;
+    height: 280px;
+    align-items: center;
+    justify-content: space-around;
+    margin-left: 140px;
+    margin-right:140px;
+    
+}
+.content-right{
     color: #E5E7EB;
     font-size: 18px;
+    background-color: gray;
+    width: 430px;
+    height: 158px;
+    text-align: center;
+}.content-right p{
+    margin-top: 69px;
 }
 
 .upper-middle p{
