--- a/style.css
+++ b/style.css
@@ -1,24 +1,32 @@
 *{
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
+ body{
+    margin: 0;
+}
 .header{
     background-color: #1F2937; 
     font-family: sans-serif;
+    height: 375px;
+   
+    border-color: #1F2937
 }
 .container{
     display: flex;
     justify-content: space-around;
 }.content-left{
     width: 430px;
-    height: 158px;
+    height: 170px;
 }
 .content-left p {
     color:  #f9faf8;
     font-size: 48px;
     font-weight: bolder;
     margin: 0;
+    flex-shrink: 1;
 }
 .right-side ul{
+    list-style: none;
     display: flex;
     gap: 15px;
     color: #E5E7EB;
@@ -26,9 +34,12 @@
 }
 
 .content-left button{
+    margin-top: 15px;
     color: #E5E7EB;
     background-color: #3882f6;
     font-size: 18px;
+    width: 110px;
+    border-radius: 6px;
 }
 .content-left div {
     color: #E5E7EB;
@@ -40,19 +51,19 @@
 }
 .container1{
     display: flex;
-    height: 280px;
+    height: 270px;
     align-items: center;
     justify-content: space-around;
-    margin-left: 140px;
-    margin-right:140px;
+    margin-left: 210px;
+    margin-right:210px;
     
 }
 .content-right{
     color: #E5E7EB;
     font-size: 18px;
     background-color: gray;
-    width: 430px;
-    height: 158px;
+    width: 400px;
+    height: 175px;
     text-align: center;
 }.content-right p{
     margin-top: 69px;
