--- a/style.css
+++ b/style.css
@@ -131,12 +131,40 @@
 }
 
 .lower-middle{
+  display: flex;
+   flex-direction: column;
     background-color: #E5E7EB;
     color: #1F2937;
     font-size: 32px;
+    align-items: center;
+    justify-content:center;
     height: 300px;
-    justify-content: center;
-}.lower-middle div{
+    flex-wrap: wrap;
+    
+ 
+}.lower-middle p{
+    flex: 0 1 auto;
+    font-style: italic;
+    width: 700px;
+    height: 150px;
+    margin: 0px;
+    
+    
+}
+.lower-middle div{
+    font-size: 18px;
     font-weight: bolder;
-    margin-right: auto;
+    align-self: flex-end;
+    justify-content: center;
+    flex: 0 1 auto;
+    
+    margin-right: 320px;
+    
+   
+   
+    
+
+    
+
+   
 }
