--- a/style.css
+++ b/style.css
@@ -157,14 +157,13 @@
     align-self: flex-end;
     justify-content: center;
     flex: 0 1 auto;
-    
     margin-right: 320px;
-    
-   
-   
-    
-
-    
-
-   
+}
+.lower{
+background-color: #3882f6;
+width:900px;
+height: 90px;
+border-radius: 7px;
+display: flex;
+margin-left: 15%;
 }
