Change the font color of the text
-changed the font color the in the main container
-changed font color the button element of the class
lower

changing the font color in main container changes
font color in the sub-containers

--- a/style.css
+++ b/style.css
@@ -166,4 +166,14 @@ height: 90px;
 border-radius: 7px;
 display: flex;
 margin-left: 15%;
+color: #E5E7EB;
+}
+.lower h2{
+   
+}
+.lower p{
+    
+}
+.lower button{
+    color: #E5E7EB;
 }
