--- a/style.css
+++ b/style.css
@@ -160,20 +160,37 @@
     margin-right: 320px;
 }
 .lower{
+margin-top:90px;
+margin-bottom: 90px; 
 background-color: #3882f6;
 width:900px;
-height: 90px;
+height: 100px;
 border-radius: 7px;
 display: flex;
 margin-left: 15%;
 color: #E5E7EB;
+justify-content: center;
+align-items: center;
+gap: 120px;
 }
 .lower h2{
-   
+   margin: 0;
 }
 .lower p{
-    
+    margin: 0;
+}
+.lower div{
+    display: flex;
+    flex-direction: column;
+    gap: 2px;
 }
 .lower button{
+    margin-top: 10px;
     color: #E5E7EB;
+    background-color: transparent;
+    border: 2px solid #E5E7EB;
+    border-radius: 5px;
+    width: 90px;
+    padding-top: 3px;
+    padding-bottom: 3px;
 }
