--- a/style.css
+++ b/style.css
@@ -14,9 +14,11 @@
 .container{
     display: flex;
     justify-content: space-around;
+    flex-wrap: wrap;
 }.content-left{
     width: 430px;
     height: 170px;
+    flex-shrink: 0;
 }
 .content-left p {
     color:  #f9faf8;
@@ -25,12 +27,14 @@
     margin: 0;
   
 }
+
 .right-side ul{
     list-style: none;
     display: flex;
     gap: 15px;
     color: #E5E7EB;
     font-size: 18px;
+    flex-wrap: wrap;
 }
 
 .content-left button{
@@ -56,7 +60,7 @@
     justify-content: space-around;
     margin-left: 210px;
     margin-right:210px;
-    
+
 }
 .content-right{
     color: #E5E7EB;
@@ -65,6 +69,7 @@
     width: 400px;
     height: 175px;
     text-align: center;
+    flex-wrap: wrap;
 }.content-right p{
     margin-top: 75px;
 }
@@ -140,38 +145,33 @@
     justify-content:center;
     height: 360px;
     flex-wrap: wrap;
-    
- 
 }.lower-middle p{
-    flex: 0 1 auto;
     font-style: italic;
     width: 700px;
     height: 150px;
     margin: 0px;
-    
-    
+    flex-wrap: wrap;
 }
 .lower-middle div{
     font-size: 18px;
     font-weight: bolder;
     align-self: flex-end;
     justify-content: center;
-    flex: 0 1 auto;
     margin-right: 320px;
 }
 .lower{
-margin-top:90px;
-margin-bottom: 90px; 
-background-color: #3882f6;
-width:900px;
-height: 100px;
-border-radius: 7px;
-display: flex;
-margin-left: 15%;
-color: #E5E7EB;
-justify-content: center;
-align-items: center;
-gap: 120px;
+    margin-top:90px;
+    margin-bottom: 90px; 
+    background-color: #3882f6;
+    width:900px;
+    height: 100px;
+    border-radius: 7px;
+    display: flex;
+    margin-left: 15%;
+    color: #E5E7EB;
+    justify-content: center;
+    align-items: center;
+    gap: 120px;
 }
 .lower h2{
    margin: 0;
