--- a/style.css
+++ b/style.css
@@ -27,14 +27,22 @@
     margin: 0;
   
 }
-
+.right-side{
+    align-items:center 
+}
 .right-side ul{
     list-style: none;
     display: flex;
+    height: 40px;
     gap: 15px;
     color: #E5E7EB;
     font-size: 18px;
-    flex-wrap: wrap;
+    flex-wrap: wrap; 
+    align-items: center  
+}.right-side li a{
+  color: #E5E7EB;
+  text-decoration-style: none;
+  text-decoration-line: none;
 }
 
 .content-left button{
@@ -49,9 +57,16 @@
     color: #E5E7EB;
     font-size: 18px;
 }
+.left-side p{
+    margin: 0;
+}
 .left-side {
     color: #f9faf8;
     font-size: 24px;
+}
+.left-side img{
+    width: 80px;
+    height: auto;
 }
 .container1{
     display: flex;
@@ -66,12 +81,16 @@
     color: #E5E7EB;
     font-size: 18px;
     background-color: gray;
-    width: 360px;
-    height: 132px;
+    width: 300px;
+    height: 150px;
     text-align: center;
     flex-wrap: wrap;
 }.content-right p{
     margin-top: 75px;
+}
+.content-right img{
+    width: 300px;
+    height:auto;
 }
 
 .upper-middle p{
@@ -90,24 +109,36 @@
     height: 130px;
     border:2px solid #3882f6; 
     border-radius: 6px;
+}.space1 img{
+    width: 130px;
+    height: 130px;
 }
 .space2{
     width: 130px;
     height: 130px;
     border:2px solid #3882f6;
     border-radius: 6px;
+}.space2 img{
+    width: 130px;
+    height: 130px;
 }
 .space3{
     width: 130px;
     height: 130px;
     border:2px solid #3882f6;
     border-radius: 6px;
+}.space3 img{
+    width: 130px;
+    height: 130px;
 }
 .space4{
     width: 130px;
     height: 130px;
     border:2px solid #3882f6;
     border-radius: 6px;
+}.space4 img{
+    width: 130px;
+    height: 130px;
 }
 .upper-middle{
     display: flex;
@@ -148,12 +179,12 @@
 }.lower-middle p{
     font-style: italic;
     width: 700px;
-    height: 150px;
+    height: 130px;
     margin: 0px;
     flex-wrap: wrap;
 }
 .lower-middle div{
-    font-size: 18px;
+    font-size: 25px;
     font-weight: bolder;
     align-self: flex-end;
     justify-content: center;
