Add link to classs lower
-edit the h2 and p element of class lower
-insert a element in div element of class lower
-remove text-decorations in a element
-edit the footer class

--- a/style.css
+++ b/style.css
@@ -225,6 +225,10 @@
     padding-top: 3px;
     padding-bottom: 3px;
 }
+.lower a{
+    text-decoration: none;
+    color: #E5E7EB;
+}
 .footer{
     background-color: #1F2937;
     height: 60px;
