--- a/style.css
+++ b/style.css
@@ -48,7 +48,7 @@
 .content-left button{
     margin-top: 15px;
     color: #E5E7EB;
-    background-color: #3882f6;
+    background-color: rgba(192, 12, 12, 0.904);
     font-size: 18px;
     width: 110px;
     border-radius: 6px;
@@ -107,7 +107,7 @@
 .space1 {
     width: 130px;
     height: 130px;
-    border:2px solid #3882f6; 
+    border:2px solid rgba(192, 12, 12, 0.904); 
     border-radius: 6px;
 }.space1 img{
     width: 130px;
@@ -116,7 +116,7 @@
 .space2{
     width: 130px;
     height: 130px;
-    border:2px solid #3882f6;
+    border:2px solid rgba(192, 12, 12, 0.904);
     border-radius: 6px;
 }.space2 img{
     width: 130px;
@@ -125,7 +125,7 @@
 .space3{
     width: 130px;
     height: 130px;
-    border:2px solid #3882f6;
+    border:2px solid rgba(192, 12, 12, 0.904);
     border-radius: 6px;
 }.space3 img{
     width: 130px;
@@ -134,7 +134,7 @@
 .space4{
     width: 130px;
     height: 130px;
-    border:2px solid #3882f6;
+    border:2px solid rgba(192, 12, 12, 0.904);
     border-radius: 6px;
 }.space4 img{
     width: 130px;
@@ -193,7 +193,7 @@
 .lower{
     margin-top:90px;
     margin-bottom: 90px; 
-    background-color: #3882f6;
+    background-color: rgba(192, 12, 12, 0.904);
     width:900px;
     height: 100px;
     border-radius: 7px;
