--- a/style.css
+++ b/style.css
@@ -201,11 +201,13 @@ color: #E5E7EB;
     height: 100px;
     border-radius: 7px;
     display: flex;
-    margin-left: 15%;
     color: #E5E7EB;
     justify-content: center;
     align-items: center;
     gap: 120px; 
+    margin-left: 16%;
+    margin-right: 16%;
+
 }
 .lower h2{
    margin: 0;
